# contract-inconsistency-alpha

./: .gitignore  CLAUDE.md  Example.md  PLAN.md  README.md  requirements.txt  show_pairs.py
alphaagent/: config.py  schemas.py
alphaagent/agents/: brief.py  comparator.py  counterexample.py  parser.py  scout.py
alphaagent/api/: routes.py
alphaagent/db/: models.py  session.py
contract-inconsistency/: .env.example  main.py  requirements.txt
contract-inconsistency/alphaagent/agents/: rater.py  scout.py
contract-inconsistency/tests/: test_scout.py
market-ingestion/: .env.example  pyproject.toml
market-ingestion/market_ingestion/: config.py  schemas.py
market-ingestion/market_ingestion/kalshi/: auth.py  client.py  normalize.py
market-ingestion/market_ingestion/polymarket/: client.py  normalize.py
tests/: test_scout.py
